--- a/css/main.css
+++ b/css/main.css
@@ -91,19 +91,6 @@ button {
   overflow: hidden;
 }
 
-.wrapper .wrapper-start-animation {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  margin: 0 auto;
-  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-  z-index: 9999;
-  -webkit-animation: start 1.2s ease-in-out forwards;
-          animation: start 1.2s ease-in-out forwards;
-}
-
 .main {
   position: relative;
   width: 100%;
@@ -840,7 +827,8 @@ form {
 }
 
 .projects .project-box:hover {
-  background-color: rgba(0, 0, 0, 0.05);
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.02);
 }
 
 .projects .project-box:hover .btn-link-project {
@@ -1000,6 +988,8 @@ form {
 
 .footer {
   width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
   text-align: center;
   font-size: 0.75rem;
   background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
@@ -1012,7 +1002,7 @@ form {
 
 @media (min-width: 768px) {
   .footer .title-footer {
-    font-size: 0.9rem;
+    font-size: 0.65rem;
   }
 }
 /*# sourceMappingURL=main.css.map */
