--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -1,6 +1,6 @@
 .projects {
   width: 100%;
-  padding: 30px 20px 10px 20px;
+  padding: 30px 20px;
   background: $main-background-bottom;
 
   @media (min-width: 768px) {
