--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,6 +1,6 @@
 .contact {
   width: 100%;
-  padding: 0 20px 20px 20px;
+  padding: 30px 20px;
   background: $main-background-top;
   transition: 0.3s;
   z-index: 10;
