--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,3 +8,4 @@ $main-background-bottom: radial-gradient(
 $main-background-top: radial-gradient(ellipse at top, #1b2735 0%, #090a0f 100%);
 
 $hover-color: rgb(255, 255, 255);
+$color-font: rgb(155, 218, 216);
