--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -35,6 +35,7 @@
         }
         .mobile-name {
           @include title(0.8rem, center, 300);
+          color: $color-font;
           @media (min-width: 768px) {
             font-size: 1rem;
             line-height: 16px;
@@ -102,6 +103,9 @@
       background-color: rgba(0, 0, 0, 0.8);
       transform: translateX(-1500px);
       transition: ease-in-out 0.3s;
+      .mobile-link:hover {
+        color: $color-font;
+      }
 
       @media (min-width: 768px) {
         top: 80px;
@@ -144,7 +148,7 @@
       font-size: 0.8rem;
       font-weight: 400;
       letter-spacing: 1px;
-      color: $hover-color;
+      color: $color-font;
     }
     .desktop-title {
       margin-top: -4px;
