--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -35,11 +35,13 @@
       width: 60%;
       margin: 0 auto;
       color: $font-color;
+      transition: 0.3s;
       box-shadow: -1px -1px 3px rgba(255, 255, 255, 0.1),
         2px 2px 6px rgba(0, 0, 0, 0.8);
     }
     .form-control.submit:hover {
       cursor: pointer;
+      color: $color-font;
       box-shadow: -1px -1px 3px rgba(255, 255, 255, 0.1),
         2px 2px 6px rgba(2, 2, 2, 0.8),
         inset -1px -1px 3px rgba(255, 255, 255, 0.05),
@@ -50,6 +52,7 @@
         inset 2px 2px 6px rgba(2, 2, 2, 1);
       text-shadow: 0 0 5px #00fff1, 0 0 20px #00fff1;
     }
+
     .form-control.message {
       color: $font-color;
       margin-top: 10px;
