--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -684,10 +684,11 @@
       position: absolute;
       top: 25%;
       left: 20%;
-
+      color: darken($font-color, 20%);
       transition: 0.3s ease-in-out;
       @media (min-width: 1024px) {
-        top: 30%;
+        font-size: 1.5rem;
+        top: 23%;
         left: 35%;
       }
     }
@@ -700,15 +701,15 @@
       top: 42%;
       left: 72%;
       @media (min-width: 1024px) {
-        top: 37%;
-        left: 62%;
+        top: 36%;
+        left: 63%;
       }
     }
     .header-link:nth-child(3) {
-      top: 52%;
+      top: 56%;
       left: 25%;
       @media (min-width: 1024px) {
-        top: 58%;
+        top: 60%;
         left: 39%;
       }
     }
@@ -716,8 +717,8 @@
       top: 72%;
       left: 65%;
       @media (min-width: 1024px) {
-        top: 65%;
-        left: 59%;
+        top: 68%;
+        left: 63%;
       }
     }
     .header-link::after {
