--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -65,7 +65,7 @@
     }
     .btn-link-project:hover {
       cursor: pointer;
-      text-shadow: 0px 0px 10px $font-color;
+      color: $color-font;
     }
     .technologies {
       padding-bottom: 5px;
