--- a/css/main.css
+++ b/css/main.css
@@ -486,7 +486,6 @@ p.title-section.slide {
   position: absolute;
   width: 100%;
   height: 100%;
-  font-size: 1rem;
   opacity: 0;
   -webkit-transition: 2s;
   transition: 2s;
@@ -509,8 +508,8 @@ p.title-section.slide {
 
 @media (min-width: 1024px) {
   .header .header-links-container .header-link {
-    font-size: 1.5rem;
-    top: 25%;
+    font-size: 1.6rem;
+    top: 30%;
     left: 35%;
   }
 }
@@ -521,13 +520,13 @@ p.title-section.slide {
 }
 
 .header .header-links-container .header-link:nth-child(2) {
-  top: 42%;
+  top: 45%;
   left: 72%;
 }
 
 @media (min-width: 1024px) {
   .header .header-links-container .header-link:nth-child(2) {
-    top: 37%;
+    top: 40%;
     left: 63%;
   }
 }
@@ -539,8 +538,8 @@ p.title-section.slide {
 
 @media (min-width: 1024px) {
   .header .header-links-container .header-link:nth-child(3) {
-    top: 62%;
-    left: 39%;
+    top: 63%;
+    left: 40%;
   }
 }
 
@@ -551,8 +550,8 @@ p.title-section.slide {
 
 @media (min-width: 1024px) {
   .header .header-links-container .header-link:nth-child(4) {
-    top: 70%;
-    left: 63%;
+    top: 71%;
+    left: 65%;
   }
 }
 
@@ -715,14 +714,14 @@ p.title-section.slide {
   line-height: 165px;
   text-align: center;
   font-size: 0.7rem;
-  background-color: rgba(0, 0, 0, 0.08);
+  background-color: rgba(0, 0, 0, 0.03);
   color: #ddd;
   font-family: "Poppins", sans-serif;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   opacity: 0;
-  -webkit-box-shadow: 0 3px 40px 10px rgba(0, 0, 0, 0.08);
-          box-shadow: 0 3px 40px 10px rgba(0, 0, 0, 0.08);
+  -webkit-box-shadow: 0 3px 40px 10px rgba(0, 0, 0, 0.03);
+          box-shadow: 0 3px 40px 10px rgba(0, 0, 0, 0.03);
   border-radius: 15px;
   overflow: hidden;
 }
@@ -1063,22 +1062,22 @@ p.title-section.slide {
 
 .contact .contact-form ::-webkit-input-placeholder {
   padding: 5px;
-  color: #d0d0d0;
+  color: #b7b7b7;
 }
 
 .contact .contact-form :-ms-input-placeholder {
   padding: 5px;
-  color: #d0d0d0;
+  color: #b7b7b7;
 }
 
 .contact .contact-form ::-ms-input-placeholder {
   padding: 5px;
-  color: #d0d0d0;
+  color: #b7b7b7;
 }
 
 .contact .contact-form ::placeholder {
   padding: 5px;
-  color: #d0d0d0;
+  color: #b7b7b7;
 }
 
 .contact .contact-links-wrapper {
@@ -1106,8 +1105,7 @@ p.title-section.slide {
 }
 
 .contact .contact-link:hover {
-  color: white;
-  text-shadow: 0 0 5px #ddd;
+  color: #9bdad8;
 }
 
 .contact .contact-awesome {
