--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -101,7 +101,7 @@
 }
 .footer {
   width: 100%;
-  max-width: 1000px;
+  max-width: $max-width;
   margin: 0 auto;
   text-align: center;
   font-size: 0.75rem;
