--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,7 +1,7 @@
 .about-me {
   width: 100%;
   padding: 30px 20px;
-  background: $main-background-bottom;
+  // background: $main-background-bottom;
   color: $font-color;
   z-index: 10;
   @media (min-width: 768px) {
