--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -1,7 +1,7 @@
 .projects {
   width: 100%;
   padding: 30px 20px;
-  background: $main-background-bottom;
+  // background: $main-background-bottom;
 
   @media (min-width: 768px) {
     padding: 30px 100px;
