--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -2,7 +2,7 @@
   width: 100%;
   min-height: 30vh;
   padding: 30px 20px;
-  background: $main-background-top;
+  // background: $main-background-top;
   z-index: 10;
   @media (min-width: 768px) {
     padding: 30px 100px;
