--- a/css/main.css
+++ b/css/main.css
@@ -116,6 +116,10 @@ p.title-section.slide {
   color: #9bdad8;
 }
 
+.bcg {
+  background: radial-gradient(ellipse at bottom, #121a24 0%, #090a0f 100%);
+}
+
 .navigation {
   position: fixed;
   width: 100%;
@@ -585,7 +589,6 @@ p.title-section.slide {
 .about-me {
   width: 100%;
   padding: 30px 20px;
-  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
   color: #ddd;
   z-index: 10;
 }
@@ -643,7 +646,6 @@ p.title-section.slide {
   width: 100%;
   min-height: 30vh;
   padding: 30px 20px;
-  background: radial-gradient(ellipse at top, #1b2735 0%, #090a0f 100%);
   z-index: 10;
 }
 
@@ -796,7 +798,6 @@ p.title-section.slide {
 .projects {
   width: 100%;
   padding: 30px 20px;
-  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
 }
 
 @media (min-width: 768px) {
@@ -967,7 +968,6 @@ p.title-section.slide {
 .contact {
   width: 100%;
   padding: 30px 20px;
-  background: radial-gradient(ellipse at top, #1b2735 0%, #090a0f 100%);
   -webkit-transition: 0.3s;
   transition: 0.3s;
   z-index: 10;
@@ -1141,7 +1141,6 @@ p.title-section.slide {
   margin: 0 auto;
   text-align: center;
   font-size: 0.75rem;
-  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
 }
 
 .footer .title-footer {
