--- a/css/main.css
+++ b/css/main.css
@@ -586,6 +586,59 @@ p.title-section.slide {
   opacity: 1;
 }
 
+.header .planet-container {
+  display: none;
+}
+
+@media (min-width: 1100px) {
+  .header .planet-container {
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
+}
+
+.header .planet-container .planet {
+  width: 45px;
+  height: 45px;
+  position: relative;
+  background: url("../img/stars/mars.png");
+  top: 25%;
+  left: 12%;
+}
+
+.header .planet-container .planet::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: rgba(0, 0, 0, 0.7);
+}
+
+.header .planet-container .planet .planeta {
+  width: 100%;
+}
+
+.header .planet-container .planet:nth-child(2) {
+  width: 30px;
+  height: 30px;
+  background-image: url("../img/stars/earth-min.png");
+  top: 45%;
+  left: 85%;
+}
+
+.header .planet-container .planet:nth-child(3) {
+  width: 40px;
+  height: 40px;
+  background-image: url("../img/stars/mars.png");
+  top: 75%;
+  left: 20%;
+}
+
 .about-me {
   width: 100%;
   padding: 30px 20px;
