--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -771,6 +771,7 @@
         height: 100%;
         border-radius: 50%;
         background: rgba(0, 0, 0, 0.7);
+        box-shadow: 2px 0 5px rgba(0, 0, 0, 0.7);
       }
       .planeta {
         width: 100%;
